--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
       <h2></h2>
       <!-- gray text --->
       <l class="gray left" >lgb hacking club home page</l>
-      <p><a href="https://github.com/raid_o_t" title="jekyll-hacker-theme" target="_blank" class="linkk bold">instagram</a></p>
+      <p><a href="https://instagram.com/raid_o_t" 
+title="jekyll-hacker-theme" 
+target="_blank" class="linkk bold">instagram</a></p>
 
 
       <!-- horizontal rule-->
