--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
            text-align: center;
        }
        .badge img {
-           max-width: 40px;
+           min-height: 30px;
+           max-height: 40px;
            padding-top: 5px;
            vertical-align: middle;
            margin-right: 5px;
@@ -52,6 +53,8 @@
          border: 2px solid gray; /* Adding border to the items */
          margin: 10px;
        }
+       .flipper{
+       }
      </style>
       <h2></h2>
       <!-- heading 1 -->
@@ -59,8 +62,8 @@
       <h2></h2>
       <!-- gray text --->
       <l class="gray left" >lgb hacking club home page</l>
-      <p><a href="https://instagram.com/raid_o_t" 
-title="jekyll-hacker-theme" 
+      <p><a href="https://instagram.com/raid_o_t"
+title="jekyll-hacker-theme"
 target="_blank" class="linkk bold">instagram</a></p>
 
 
@@ -93,19 +96,49 @@ target="_blank" class="linkk bold">instagram</a></p>
             Linux
         </div>
         <div class="badge">
-            <img src="https://cdn.simpleicons.org/python/white" alt="Python">
-            Python
-        </div>
-        <div class="badge">
             <img src="https://cdn.simpleicons.org/windows/white" alt="Windows">
             Windows
+        </div>
+        <div class="badge">
+            <img src="https://cdn.simpleicons.org/kalilinux/white" alt="Kali Linux">
+            <br>
+            Kali Linux
+        </div>
+        <div class="badge">
+            <img src="https://cdn.simpleicons.org/apple/white" alt="macOS">
+            macOS
         </div>
         <div class="badge">
             <img src="https://cdn.simpleicons.org/gnometerminal/white" alt="Bash">
             Bash
         </div>
         <div class="badge">
-            More?
+            <img src="https://cdn.simpleicons.org/python/white" alt="Python">
+            Python
+        </div>
+        <div class="badge">
+            <img src="https://cdn.simpleicons.org/html5/white" alt="HTML5">
+            HTML5
+        </div>
+        <div class="badge">
+            <img src="https://cdn.simpleicons.org/css3/white" alt="CSS3">
+            CSS3
+        </div>
+        <div class="badge">
+            <img src="https://cdn.simpleicons.org/raspberrypi/white" alt="Raspberry Pi">
+            RPi
+        </div>
+      </div>
+      <div class="badges">
+        <div class="badge">
+            <img src="flipper.png" alt="Flipper Zero" class="Flipper Zero">
+            <br>
+            Flipper Zero
+        </div>
+        <div class="badge">
+            <img src="aircrack-ng.png" alt="Flipper Zero" class="Aircrack-ng">
+            <br>
+            Aircrack-ng
         </div>
       </div>
 
