--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
       <!-- Version 1.0.1-->
    </head>
    <body>
+     <script type="text/javascript">
+       window.addEventListener("DOMContentLoaded", function() {
+         // Function to check if the user is on a mobile device
+         function isMobileDevice() {
+           return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+         }
+
+         // Redirect to "mobile.html" if user is on a mobile device
+         if (isMobileDevice()) {
+           window.location.href = "mobile.html";
+         }
+       });
+
+     </script>
      <style media="screen">
        .cd{
          text-align: center;
