--- a/mobile.html
+++ b/mobile.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Please access this on your computer</h1>
-    <h3>Get on a computer, you'll need it to hack anyways.</h3>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mobile.css">
+    <title>raidOT</title>
+</head>
+<body>
+    <div class="wrapper">
+        <h1>raidOT Mobile Page</h1>
+        <p>Please access this page on a computer, you'll need it to hack anyways.</p>
+    </div>
+</body>
 </html>
