--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="assets/css/main.css">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?autoload=true&amp;skin=sunburst&amp;lang=css" defer=""></script>
       <!-- Version 1.0.1-->
    </head>
@@ -69,6 +66,9 @@
        }
        .flipper{
        }
+       .centert{
+         text-align: center
+       }
      </style>
       <h2></h2>
       <!-- heading 1 -->
@@ -89,8 +89,9 @@ target="_blank" class="linkk bold">instagram</a></p>
 
       <h1 class="left topp">Introduction</h1>
       <p>
-         raidOT is the only LGB hacking club. We cover all sorts of topics relating to computer-science and cybersecurity. Want to learn how to crack an old password, come to us. Want to learn how to defend yourself from the dangers of the dark web, come to us. Want to learn the skills you can leverage in a computer-science based career? Come to us.
+         raidOT is the only LGB hacking club. We cover all sorts of topics relating to computer-science and cybersecurity. Want to learn how to crack an old password? Want to learn how to defend yourself from the dangers of the dark web? Want to learn the skills you can leverage in a computer-science based career?
       </p>
+      <p class="centert" style="font-size: 40px;">Come to us.</p>
 
       <h1 class="left topp">Our morals</h1>
       <ul>
@@ -210,7 +211,7 @@ target="_blank" class="linkk bold">instagram</a></p>
       setInterval(updateCountdown, 1000); // Update every second
       </script>
       <div class="disclaimer">
-        <h6>DISCLAIMER: This organization is dedicated to providing information and resources related to hacking, including tools and techniques that may be used for security testing and research purposes only. It is important to note that the tools and techniques discussed on this organization can be used for illegal activities and therefore, should only be used ethically and with the explicit permission of the target system owner. We do not condone any illegal activities and will not be held responsible for any misuse of the information provided on this organization. We strongly advise that you use your knowledge and skills for lawful purposes only and abide by all applicable laws and regulations. By accessing and using this organization, you agree to be bound by these terms and conditions.</h6>
+        <p>DISCLAIMER: This organization is dedicated to providing information and resources related to hacking, including tools and techniques that may be used for security testing and research purposes only. It is important to note that the tools and techniques discussed on this organization can be used for illegal activities and therefore, should only be used ethically and with the explicit permission of the target system owner. We do not condone any illegal activities and will not be held responsible for any misuse of the information provided on this organization. We strongly advise that you use your knowledge and skills for lawful purposes only and abide by all applicable laws and regulations. By accessing and using this organization, you agree to be bound by these terms and conditions.</p>
       </div>
 
 
