--- a/mobile.html
+++ b/mobile.html
@@ -8,7 +8,7 @@
       <title>raidOT</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="assets/css/main.css">
+      <link rel="stylesheet" href="mobile.css">
       <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?autoload=true&amp;skin=sunburst&amp;lang=css" defer=""></script>
       <!-- Version 1.0.1-->
    </head>
