Added custom favicons and organised js scripts

--- a/mobile.html
+++ b/mobile.html
@@ -1,15 +1,14 @@
-
-
-
 <!doctype html>
 <html>
    <head>
-      <link rel="icon" href="https://avatars.githubusercontent.com/u/69230350?v=4">
+      <link rel="icon" id="favicon" type="image/png" href="b.png">
       <title>raidOT</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="mobile.css">
       <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?autoload=true&amp;skin=sunburst&amp;lang=css" defer=""></script>
+      <script src="assets/js/fav.js"></script>
+      <script src="assets/js/cd.js"></script>
       <!-- Version 1.0.1-->
    </head>
    <body>
@@ -35,47 +34,7 @@
         <p id="demo" style="font-size: 24px;"></p>
       </div>
       <script>
-      function updateCountdown() {
-        var now = new Date(); // Get current date and time
-        var countdownDate = new Date(now); // Create a new date object
-
-        // Calculate days until next Thursday
-        var daysUntilThursday = (11 - now.getDay() + 7) % 7; // Calculate days until next Thursday
-
-        // Set countdownDate to next Thursday at 15:00 Zurich time
-        countdownDate.setDate(now.getDate() + daysUntilThursday);
-        countdownDate.setHours(15);
-        countdownDate.setMinutes(0);
-        countdownDate.setSeconds(0);
-
-        var distance = countdownDate - now; // Calculate time difference
-
-        // If it's Thursday at 15:00 Zurich time, display "meeting time"
-        if (daysUntilThursday === 0 && now.getHours() === 15) {
-          document.getElementById("demo").innerHTML = "MEETING TIME!";
-          setTimeout(updateCountdown, 3600000); // Reset the countdown after an hour (3600000 ms)
-          return;
-        }
-
-        // If the countdown date has passed for the current week, set it to next week's Thursday
-        if (distance < 0) {
-          countdownDate.setDate(countdownDate.getDate() + 7);
-          distance = countdownDate - now; // Recalculate time difference
-        }
-
-        // Time calculations for days, hours, minutes, and seconds
-        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-        // Output the countdown
-        document.getElementById("demo").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s";
-      }
-
-      // Initial call to update the countdown
-      updateCountdown();
-      setInterval(updateCountdown, 1000); // Update every second
+      d
       </script>
 </body>
 </html>
