--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html>
    <head>
-      <link rel="icon" href="https://avatars.githubusercontent.com/u/69230350?v=4">
-      <title>Hacker theme (thelearn-tech)</title>
+      <link rel="icon" id="favicon" type="image/png" href="b.png">
+      <title>raidOT</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="assets/css/main.css">
       <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?autoload=true&amp;skin=sunburst&amp;lang=css" defer=""></script>
+      <script src="assets/js/fav.js"></script>
+      <script src="assets/js/cd.js"></script>
       <!-- Version 1.0.1-->
    </head>
    <body>
