--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ target="_blank" class="linkk bold">instagram</a></p>
 
 
 
-      <h1 class="left topp">Content</h1>
+      <h1 class="left topp">What we cover</h1>
       <div class="badges">
         <div class="badge">
             <img src="https://cdn.simpleicons.org/linux/white" alt="Linux">
