--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ target="_blank" class="linkk bold">instagram</a></p>
 
 
       <h1 class="left topp">Meetings</h1>
-      <p>We hold meetings every Thursday, 15:00 at the Stem Center in the Projector room.</p>
+      <p>We hold meetings every Tuesdays and Thursdays, 15:00 at the Stem Center in the Projector room.</p>
       <div class="cd">
         <p>Countdown to next meeting:</p>
         <p id="demo" style="font-size: 24px;"></p>
