added instagram handle

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ target="_blank" class="linkk bold">instagram</a></p>
          raidOT is the only LGB hacking club. We cover all sorts of topics relating to computer-science and cybersecurity. Want to learn how to crack an old password? Want to learn how to defend yourself from the dangers of the dark web? Want to learn the skills you can leverage in a computer-science based career?
       </p>
       <p class="centert" style="font-size: 40px;">Come to us.</p>
-      <p class="centert">If you are interested, please contact us on our instagram: <a href="https://www.instagram.com/raid_o_t"></a></p>
+      <p class="centert">If you are interested, please contact us on our instagram: <a href="https://www.instagram.com/raid_o_t">@raid_o_t</a></p>
 
       <h1 class="left topp">Our morals</h1>
       <ul>
