testfix1 color links

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ target="_blank" class="linkk bold">instagram</a></p>
 
       <h1 class="left topp">Recommended Content</h1>
       <p>Here is some amazing content to get you started in your cybersecurity and hacking experience:</p>
-      <ul style="a {color: #44fc07;}">
+      <ul style="color: #44fc07;">
         <li>Darknet Diaries [Podcast]</li>
         <ul>
           <li><a href="https://drive.google.com/file/d/1Y7GAxsfHtZkA50jiqNcrYYfZkzvEW1XN/view">Samy</a></li>
