fixed color issue and changes links to redirect mode

--- a/index.html
+++ b/index.html
@@ -165,16 +165,16 @@ target="_blank" class="linkk bold">instagram</a></p>
       <ul style="color: #44fc07;">
         <li>Darknet Diaries [Podcast]</li>
         <ul>
-          <li><a href="https://drive.google.com/file/d/1Y7GAxsfHtZkA50jiqNcrYYfZkzvEW1XN/view">Samy</a></li>
-          <li><a href="https://drive.google.com/file/d/1Hm0BCRWXtT5RGgPViKLOKib9YviSfsjt/view">Shadow Brokers</a></li>
-          <li><a href="https://drive.google.com/file/d/1F56QzWk72wSUv7Yct3y1903PDFblGwdi/view">The Pirate Bay</a></li>
-          <li><a href="https://drive.google.com/file/d/1wQKkWoZS92IrxvdFmk622p0HWpWsuP10/view">WannaCry</a></li>
+          <li><a href="https://drive.google.com/file/d/1Y7GAxsfHtZkA50jiqNcrYYfZkzvEW1XN/view" target="_blank">Samy</a></li>
+          <li><a href="https://drive.google.com/file/d/1Hm0BCRWXtT5RGgPViKLOKib9YviSfsjt/view" target="_blank">Shadow Brokers</a></li>
+          <li><a href="https://drive.google.com/file/d/1F56QzWk72wSUv7Yct3y1903PDFblGwdi/view" target="_blank">The Pirate Bay</a></li>
+          <li><a href="https://drive.google.com/file/d/1wQKkWoZS92IrxvdFmk622p0HWpWsuP10/view" target="_blank">WannaCry</a></li>
         </ul>
         <li>Videos</li>
         <ul>
-          <li><a href="https://drive.google.com/file/d/16gBDMMeKvDeOjZlCdHmIIBMB0cuDTA7P/view">Computer Networking in 100 Seconds</a></li>
-          <li><a href="https://drive.google.com/file/d/1fxhFPvV_pbtUy3L-aeYvaPyrMvC8CG3g/view">Why so many distros? The Weird History of Linuux</a></li>
-          <li><a href="https://drive.google.com/file/d/1LNBRazQUY4PvapL5o2rmlwOAKNbjjwOD/view">Bash in 100 Seconds</a></li>
+          <li><a href="https://drive.google.com/file/d/16gBDMMeKvDeOjZlCdHmIIBMB0cuDTA7P/view" target="_blank">Computer Networking in 100 Seconds</a></li>
+          <li><a href="https://drive.google.com/file/d/1fxhFPvV_pbtUy3L-aeYvaPyrMvC8CG3g/view" target="_blank">Why so many distros? The Weird History of Linuux</a></li>
+          <li><a href="https://drive.google.com/file/d/1LNBRazQUY4PvapL5o2rmlwOAKNbjjwOD/view" target="_blank">Bash in 100 Seconds</a></li>
         </ul>
       </ul>
 
